<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="last_updated">Last Updated</string>
    <string name="india_covid_19_ntracker">India covid-19 \nTracker</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="actv">ACTV</string>
    <string name="cnfmd">CNFMD</string>
    <string name="state_ut">STATE/UT</string>
    <string name="rcvrd">RCVRD</string>
    <string name="dcsd">DCSD</string>
    <string name="default_notification_channel_id">default</string>
    <string name="text_confirmed_cases">Confirmed Cases : %s</string>
    <string name="text_last_updated">Last Updated : %s</string>
    <string name="default_notification_channel_name">Covid-19 India</string>
</resources>